--- a/css/style.css
+++ b/css/style.css
@@ -561,13 +561,19 @@ figure {
     width: 100vw;
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center center !important;
+    background-position: center center;
     position: relative;
     width: 100%;
 }
 
 .fh5co-cover.cover-about {
-    background-position: center 92% !important;
+    background-position: center 71%;
+}
+
+@media screen and (max-width: 1500px) {
+    .fh5co-cover.cover-about {
+        background-position: center 92%;
+    }
 }
 
 .fh5co-cover .overlay {
