--- a/css/style.css
+++ b/css/style.css
@@ -1950,10 +1950,19 @@ form label {
     outline: none;
 }
 
-#sticky-footer-bar.row {
+/* #sticky-footer-bar.row {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+} */
+
+#sticky-footer-bar .float-right {
+    float: right;
+    width: 100px;
+}
+#sticky-footer-bar .float-center {
+    margin: 0 auto;
+    width: fit-content;
 }
 
 .sticky-footer {
@@ -1970,8 +1979,9 @@ form label {
 }
 #sticky-footer-bar .social-icons {
     margin-bottom: 0;
-    margin-right: 10px;
+    margin-right: 8px;
     padding-left: 0;
+    text-align: right;
 }
 
 #sticky-footer-bar .social-icons li {
