--- a/css/style.css
+++ b/css/style.css
@@ -195,6 +195,18 @@ p {
     font-size: 16px;
 }
 
+p a {
+    padding-bottom: 0.05em;
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    border-bottom-color: rgba(28, 28, 28, 0.09);
+}
+
+p a:hover {
+    color: rgba(28, 28, 28, 1);
+    border-bottom-color: rgba(28, 28, 28, 0.65);
+}
+
 h1,
 h2,
 h3,
@@ -447,6 +459,7 @@ figure {
     line-height: 1.2;
     text-transform: none;
     font-size: 15px;
+    width: fit-content;
 }
 .fh5co-nav ul li.has-dropdown .dropdown li a:hover {
     color: #000;
@@ -1709,18 +1722,6 @@ form label {
     margin-bottom: 10px;
 }
 
-.feature-left .feature-copy p a {
-    padding-bottom: 0.05em;
-    border-bottom-width: 1px;
-    border-bottom-style: solid;
-    border-bottom-color: rgba(28, 28, 28, 0.09);
-}
-
-.feature-left .feature-copy p a:hover {
-    color: rgba(28, 28, 28, 1);
-    border-bottom-color: rgba(28, 28, 28, 0.65);
-}
-
 #fh5co-started {
     position: relative;
 }
@@ -1868,11 +1869,11 @@ form label {
     -o-transform: translateX(0px);
     transform: translateX(0px);
 }
-#fh5co-offcanvas a {
+#fh5co-offcanvas li a {
     color: rgba(0, 0, 0, 1);
 }
-#fh5co-offcanvas a:hover {
-    /* color: rgba(255, 255, 255, 0.8); */
+#fh5co-offcanvas li a:hover,
+.dropdown li a:hover {
     color: var(--accent_color);
     border-bottom-width: 1px;
     border-bottom-style: solid;
@@ -2055,8 +2056,9 @@ form label {
 }
 
 .sticky-footer-text a:hover {
-    color: black;
-    transition-duration: 0.1s;
+    border-bottom-style: solid;
+    border-width: 1px;
+    border-bottom-color: rgba(255, 255, 255, 0.8);
 }
 
 .fh5co-nav-toggle {
