--- a/css/style.css
+++ b/css/style.css
@@ -2462,7 +2462,8 @@ form label {
     flex-direction: row;
 }
 
-.flex-row {
+.flex-row,
+.flex-row-md {
     display: flex;
     flex-direction: row;
 }
@@ -2483,6 +2484,20 @@ form label {
 .col-md-12.no-padding {
     padding-left: 0px;
     padding-right: 0px;
+}
+@media (max-width: 991px) {
+    .flex-row-md {
+        flex-direction: column;
+    }
+    .order-md-1 {
+        order: 1;
+    }
+    .order-md-2 {
+        order: 2;
+    }
+    .order-md-3 {
+        order: 3;
+    }
 }
 
 @media screen and (max-width: 767px) {
