--- a/css/style.css
+++ b/css/style.css
@@ -1173,7 +1173,7 @@ form label {
 #fh5co-counter .display-tc h1,
 .fh5co-cover .display-tc h1 {
     margin-bottom: 0px;
-    font-size: 60px;
+    font-size: 42px;
     line-height: 1.5;
     /* font-family: "Sacramento", Arial, serif; */
 }
@@ -1181,14 +1181,14 @@ form label {
     #fh5co-header .display-tc h1,
     #fh5co-counter .display-tc h1,
     .fh5co-cover .display-tc h1 {
-        font-size: 40px;
+        font-size: 32px;
     }
 }
 @media screen and (max-width: 480px) {
     #fh5co-header .display-tc h1,
     #fh5co-counter .display-tc h1,
     .fh5co-cover .display-tc h1 {
-        font-size: 30px;
+        font-size: 25px;
     }
 }
 #fh5co-header .display-tc h2,
@@ -2431,7 +2431,12 @@ form label {
     width: 100%;
     height: 100%;
     z-index: 9999;
-    background: url(../images/loader.gif) center no-repeat #fff;
+    background-color: #fff;
+    background-image: url(../img/loader.gif), url(../img/fh-black.png);
+    /* background-image: ; */
+    background-position: center, center;
+    background-size: 80px, 30px;
+    background-repeat: no-repeat, no-repeat;
 }
 
 .js .animate-box {
@@ -2811,7 +2816,19 @@ form label {
     font-style: normal;
 }
 
+@font-face {
+    font-family: "quentinregular";
+    src: url("/fonts/quentin-webfont.woff2") format("woff2"), url("/fonts/quentin-webfont.woff") format("woff");
+    font-weight: normal;
+    font-style: normal;
+}
+
 h2.font-script {
     font-family: monthgladeregular;
     font-size: 85px;
+}
+
+h2.portfolio {
+    font-family: quentinregular;
+    font-size: 65px;
 }
