updated portfolio and small menu and footer tweaks

--- a/css/style.css
+++ b/css/style.css
@@ -2805,6 +2805,36 @@ form label {
     .order-md-23 {
         order: 23;
     }
+    .order-md-24 {
+        order: 24;
+    }
+    .order-md-25 {
+        order: 25;
+    }
+    .order-md-26 {
+        order: 26;
+    }
+    .order-md-27 {
+        order: 27;
+    }
+    .order-md-28 {
+        order: 28;
+    }
+    .order-md-29 {
+        order: 29;
+    }
+    .order-md-30 {
+        order: 30;
+    }
+    .order-md-31 {
+        order: 31;
+    }
+    .order-md-32 {
+        order: 32;
+    }
+    .order-md-33 {
+        order: 33;
+    }
 }
 
 /* Special Fonts */
