--- a/css/style.css
+++ b/css/style.css
@@ -319,7 +319,7 @@ figure {
     justify-content: center;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     .fh5co-nav {
         padding: 20px 0;
     }
@@ -358,7 +358,7 @@ figure {
     margin-left: 0;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     .fh5co-nav .menu-1,
     .fh5co-nav .menu-2 {
         display: none;
@@ -613,7 +613,7 @@ figure {
     position: relative;
     z-index: 10;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     .fh5co-cover {
         height: 66vw;
         min-height: 275px;
@@ -642,7 +642,7 @@ figure {
     display: table;
     width: 100%;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     .fh5co-cover .display-t,
     .fh5co-cover .display-tc {
         height: 600px;
@@ -651,7 +651,7 @@ figure {
 .fh5co-cover.fh5co-cover-sm {
     height: 600px;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     .fh5co-cover.fh5co-cover-sm {
         height: 400px;
     }
@@ -662,7 +662,7 @@ figure {
     display: table;
     width: 100%;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     .fh5co-cover.fh5co-cover-sm .display-t,
     .fh5co-cover.fh5co-cover-sm .display-tc {
         height: 400px;
@@ -703,7 +703,7 @@ figure {
     bottom: 0;
     background: rgba(0, 0, 0, 0.4);
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     #fh5co-counter,
     #fh5co-event {
         height: inherit;
@@ -728,7 +728,7 @@ figure {
     -ms-border-radius: 4px;
     border-radius: 4px;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     #fh5co-counter .event-wrap,
     #fh5co-event .event-wrap {
         margin-bottom: 10px;
@@ -766,7 +766,7 @@ figure {
 #fh5co-counter {
     height: 600px;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     #fh5co-counter {
         height: auto;
     }
@@ -1021,7 +1021,7 @@ figure {
     position: absolute;
     z-index: 100;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     #fh5co-gallery-list li a .case-studies-summary {
         bottom: 1em;
         left: 1em;
@@ -1038,7 +1038,7 @@ figure {
     color: #fff;
     margin-bottom: 0;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     #fh5co-gallery-list li a .case-studies-summary h2 {
         font-size: 20px;
     }
@@ -1046,7 +1046,7 @@ figure {
 #fh5co-gallery-list li.one-third {
     width: 32.3%;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     #fh5co-gallery-list li.one-third {
         width: 49%;
     }
@@ -1062,7 +1062,7 @@ figure {
     height: 500px;
     position: relative;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     #map {
         height: 200px;
     }
@@ -1177,7 +1177,7 @@ form label {
     line-height: 1.5;
     /* font-family: "Sacramento", Arial, serif; */
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     #fh5co-header .display-tc h1,
     #fh5co-counter .display-tc h1,
     .fh5co-cover .display-tc h1 {
@@ -1240,7 +1240,7 @@ form label {
     color: rgba(255, 255, 255, 0.5);
     letter-spacing: 0.1em;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     #fh5co-counter .feature-center {
         margin-bottom: 50px;
     }
@@ -1343,7 +1343,7 @@ form label {
     width: 180px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     #fh5co-testimonial,
     #fh5co-services,
     #fh5co-started,
@@ -1380,7 +1380,7 @@ form label {
     margin: 0 auto;
     position: relative;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     .couple-wrap {
         width: 100%;
     }
@@ -1404,7 +1404,7 @@ form label {
     -ms-border-radius: 50%;
     border-radius: 50%;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     .heart {
         display: none;
     }
@@ -1414,7 +1414,7 @@ form label {
     width: 50%;
     float: left;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     .couple-half {
         width: 100%;
     }
@@ -1496,7 +1496,7 @@ form label {
     width: 100%;
     margin-bottom: 40px;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     .feature-center {
         margin-bottom: 50px;
     }
@@ -1582,7 +1582,7 @@ form label {
     font-family: "Cardo", serif;
     /* "Sacramento", Arial, serif; */
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     .fh5co-heading h2 {
         font-size: 40px;
     }
@@ -1716,7 +1716,7 @@ form label {
 .feature-left .icon .image {
     display: block;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     .feature-left .icon {
         margin-right: 5%;
     }
@@ -1731,7 +1731,7 @@ form label {
     float: left;
     width: 80%;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     .feature-left .feature-copy {
         width: 70%;
         float: left;
@@ -1841,7 +1841,7 @@ form label {
     margin-bottom: 0;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     #fh5co-footer .copyright .pull-left,
     #fh5co-footer .copyright .pull-right {
         float: none !important;
@@ -2073,7 +2073,7 @@ form label {
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     .sticky-footer-text,
     .sticky-footer-text a {
         font-size: min(18px, 3vw);
@@ -2871,7 +2871,7 @@ h2.portfolio {
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     #fh5co-header .display-tc h2.portfolio {
         font-size: 70px;
         margin-bottom: 10px;
@@ -2885,4 +2885,61 @@ h2.portfolio {
 
 .carousel-inner .item {
     /* transition-duration: 1s; */
+}
+
+/* OVERRIDE */
+
+.carousel-control.right,
+.carousel-control.left {
+    background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0.0001) 0%, rgba(0, 0, 0, 0) 0%);
+    background-image: -o-linear-gradient(left, rgba(0, 0, 0, 0.0001) 0%, rgba(0, 0, 0, 0) 0%);
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.0001) 0%, rgba(0, 0, 0, 0) 0%);
+    background-repeat: repeat-x;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#80000000', GradientType=1);
+}
+.carousel-control {
+    position: absolute;
+    top: 90%;
+    left: inherit;
+    bottom: 0;
+    width: 50%;
+    opacity: 0.5;
+    filter: alpha(opacity=50);
+    font-size: 150px;
+    color: #fff;
+    text-align: center;
+    text-shadow: 0 1px 2px rgb(0 0 0 / 60%);
+}
+
+@media screen and (min-width: 768px) {
+    .carousel-control .glyphicon-chevron-left,
+    .carousel-control .glyphicon-chevron-right,
+    .carousel-control .icon-prev,
+    .carousel-control .icon-next {
+        font-size: 65px;
+    }
+}
+
+.hero-slider-carousel-arrows {
+    position: absolute;
+    /* top: 50%; */
+    left: inherit;
+    right: inherit;
+    bottom: 0;
+}
+
+.hero-slider-carousel-arrows.left {
+    right: min(10%, 75px);
+}
+.hero-slider-carousel-arrows.right {
+    left: min(10%, 75px);
+}
+
+@media screen and (max-width: 767px) {
+    .hero-slider-carousel-arrows.left {
+        right: 80%;
+    }
+    .hero-slider-carousel-arrows.right {
+        left: 80%;
+    }
 }
